# go-interlang

go_to_c/static_c_lib/: build.sh  clean.sh  main.go
go_to_c/static_c_lib/greetings/: CMakeLists.txt
go_to_c/static_c_lib_make/: Makefile
go_to_c/static_c_lib_make/greetings/: greetings.h
go_to_c/static_c_lib_openwrt_mips_cross_compile/: Makefile  main.go
go_to_c/static_c_lib_openwrt_mips_cross_compile/greetings/: aussie.c
go_to_c/xgo_static_c_lib/: README.md  main.go
